# trfjpn

./: README.md  __main__.py  agent_trained.pkl  dqn.pt  pyproject.toml  pyrightconfig.json  run_setup.yaml  tensor.pt
action/: actions.py  positional.py
agent/: agent.py
common/: configs.py
map/: base_map.py  lever.py  mag.py
nn/: config.py  dqn.py  memory.py  setup.py
src/: __main__.py
src/action/: penalty.py  update_state.py
src/agent/: agent.py
src/geometry/: collision.py
src/loss/: hunger.py
src/map/: base_map.py  bounds.py  lever.py  mag.py
src/nn/: dqn.py  memory.py
src/state/: general.py  training.py
state/: general.py
